Comments: added comments to html file for better structure. Styles: give backgrounds to inputs  colors. STILL NEED TO FIX: radio and checkbox inputs to align with label.

--- a/main.css
+++ b/main.css
@@ -27,5 +27,35 @@ form {
     margin: 0 auto;
 }
 
+fieldset {
+    border: none;
+    padding: 2rem 0;
+}
 
+fieldset:not(last-of-type) {
+    border-bottom: 3px solid #3b3b4f;
+}
+
+label {
+    display: block;
+    margin: 0.5rem 0;
+}
+
+input, textarea, select {
+    margin: 10px 0 0 0;
+    width: 100%;
+    min-height: 2em;
+}
+
+input, textarea {
+    background-color: #0a0a23;
+    border:1px solid #0a0a23;
+    color: #ffffff;
+}
+
+input[type="radio"] [type="checkbox"] {
+    width: unset;
+    margin: 0 0.5em 0 0;
+    vertical-align: middle;
+}
 
